# pysenxor-lite

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: check-and-test.yml  release.yml
api/cam/: index.html
api/consts/: index.html
api/core/: index.html
api/cv_utils/: index.html
api/error/: index.html
api/fields/: index.html
api/interface/protocol/: index.html
api/interface/registry/: index.html
api/interface/serial_port/: index.html
api/interface/tcpip_serial/: index.html
api/log/: index.html
api/proc/: index.html
api/registers/: index.html
api/regmap/: index.html
api/senxor/: index.html
api/settings/: index.html
api/thread/: index.html
api/utils/: index.html
ci/: gen_ref_pages.py
development_rules/: index.html
docs/: development_rules.md  index.md
docs/api/: cam.md  consts.md  core.md  cv_utils.md  error.md  fields.md  log.md  proc.md  registers.md  regmap.md  regs.md  senxor.md  settings.md  thread.md  utils.md
docs/api/interface/: protocol.md  registry.md  serial_port.md  tcpip_serial.md
docs/ci/: gen_ref_pages.py
docs/examples/: basic_stream.md  fastapi_mjpeg_streamer.md  multi_senxor_alarm.md  tcpip_stream.md  thermal_rgb.md  thermal_rgb_recorder.md  thread_stream.md  v4l2-virtual-camera.md  virtual-camera.md
docs/guides/: 1.connect_device.md  2.basic_stream.md  3.data_processing.md  4.device_control.md  5.logging.md  6.loading_settings.md  7.error_handling.md  device_control.md  getting_started.md  loading_settings.md
docs/guides/advanced/: 1.concurrency_patterns.md
docs/usage/: quick_start.md
example/: basic_stream.py  dual-light_evk.py  dual_light_cv.py  dual_light_tkinter.py  dual_stream_tkinter.py  fastapi_mjpeg_streamer.py  multi_senxor.py  tcpip_stream.py  thermal+rgb.py  thermal_rgb_recorder.py  thermal_toolbox.py  thread-listener.py  thread-stream.py  thread-tkinter-mvc.py  tkiner-demo.py  tkinter-demo.py  v4l2-virtual-camera.py  virtual-camera.py
examples/basic_stream/: index.html
examples/fastapi_mjpeg_streamer/: index.html
examples/multi_senxor_alarm/: index.html
examples/tcpip_stream/: index.html
examples/thermal_rgb/: index.html
examples/thermal_rgb_recorder/: index.html
examples/thread_stream/: index.html
examples/v4l2-virtual-camera/: index.html
examples/virtual-camera/: index.html
guides/1.connect_device/: index.html
guides/2.basic_stream/: index.html
guides/3.data_processing/: index.html
guides/4.device_control/: index.html
guides/5.logging/: index.html
guides/6.loading_settings/: index.html
guides/7.error_handling/: index.html
guides/advanced/1.concurrency_patterns/: index.html
guides/device_control/: index.html
guides/getting_started/: index.html
guides/loading_settings/: index.html
search/: search_index.json
senxor/: __init__.py  _error.py  _senxor.py  cam.py  consts.py  core.py  cv_utils.py  error.py  events.py  helper.py  log.py  proc.py  regs.py  settings.py  thread.py  utils.py
senxor/_interface/: __init__.py  _serial_parser.py  _serial_reader.py  parser.py  protocol.py  registry.py  serial_.py  usb_serial.py
senxor/_utils/: __init__.py  setting.py
senxor/interface/: __init__.py  esp32_discovery.py  event.py  protocol.py  registry.py
senxor/interface/serial_port/: __init__.py  _parser.py  _reader.py  base.py  core.py  processor.py
senxor/interface/tcpip_serial/: __init__.py  core.py
senxor/regmap/: __init__.py  _field.py  _fields.py  _reg.py  _regmap.py  _regs.py  base.py  core.py  fields.py  registers.py  types.py
senxor/resources/: cmaps.json
senxor/resources/cmaps/: __init__.py  autumn.npy  bone.npy  cividis.npy  cool.npy  hot.npy  ironbow.npy  jet.npy  pink.npy  rainbow.npy  rainbow2.npy  spring.npy  turbo.npy
tests/: __init__.py  test_regs.py
tests/senxor/: __init__.py  conftest.py  test_cam.py  test_device_state.py  test_fields_changed_callback.py  test_thread.py
tests/senxor/test_interface/: test_serial.py  test_serial_parser.py
tests/senxor/test_proc/: test_colormaps.py
tests/senxor/test_regmap/: conftest.py  fixtures.py  test_auto_reset_behavior.py  test_boundary_conditions.py  test_error_handling.py  test_field.py  test_fields.py  test_fields_manager.py  test_fields_private.py  test_fields_public.py  test_performance.py  test_reg.py  test_registers_manager.py  test_regmap_core.py  test_regmap_integration.py  test_regs.py  test_regs_private.py  test_regs_public.py
