[project]
name = "pysenxor"
version = "2.0.0"
authors = [{ name = "Merididan Innovation", email = "info@meridianinno.com" }]
description = "Python library for interaction with Meridian Innovation's SenXor(TM)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "colormap-tool>=1.0.0",
  "numpy>=1.19.5",
  "pyserial>=3.5",
  "structlog>=21.5.0",
]

[dependency-groups]
dev = [
  "lite-camera>=2.0.4",
  "opencv-python>=4.11.0.86",
  "pillow>=11.2.1",
  "pre-commit>=4.2.0",
  "pytest>=7.0.1",
  "rich>=10.11.0",
]
# Dual-light Camera App support.
dual-light = [
    # "lite-camera>=2.0.4",
]
# Documentation support.
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "pymdown-extensions>=10.16",
]
test = [
    "deptry>=0.23.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
package = [
    "nuitka>=2.7.7",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
senxor = "senxor"

[tool.setuptools.package-data]
"senxor" = ["resources/*"]

[project.urls]
Homepage = "https://www.meridianinno.com/"
Issues = "https://www.meridianinno.com/"

[tool.uv]
default-groups = ["dev", "dual-light", "test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--capture sys --verbose"
markers = [
    "gui: marks tests as requiring a GUI",
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
src = ["senxor", "example", "bin", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "TD", "N", "C", "T",
  "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D401",
  "A", "ANN",
  "FIX",
  "PLR", "FBT",
  "RET", "EM", "ERA", "BLE", "SLF", "TRY",
]
fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.format]
preview = true
skip-magic-trailing-comma = false
docstring-code-format = true
