[project]
name = "pysenxor-lite"
version = "3.1.5"
authors = [{ name = "Merididan Innovation", email = "info@meridianinno.com" }]
description = "Python library for interaction with Meridian Innovation's SenXor(TM)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "numpy>=1.19.5",
  "pyserial>=3.5",
  "structlog>=25.4.0",
  "tomli>=2.2.1 ; python_full_version < '3.10'",
]

[dependency-groups]
dev = ["opencv-python>=4.11.0.86", "pillow>=11.2.1", "zeroconf>=0.148.0"]

camera = ["pyvirtualcam>=0.14.0", "cv2-enumerate-cameras>=1.2.2"]

doc = [
    "mkdocstrings-python>=1.18.2",
    "zensical>=0.0.2",
]

test = [
  "pyright>=1.1.409",
  "pre-commit>=4.2.0",
  "pytest>=8.4.0",
  "ruff>=0.11.13",
  "rich>=10.11.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
senxor = "senxor"

[tool.setuptools.package-data]
"senxor" = ["resources/**/*"]

[project.urls]
Homepage = "https://www.meridianinno.com/"
Issues = "https://www.meridianinno.com/"

[project.optional-dependencies]
tcpip = ["zeroconf>=0.148.0"]


[tool.uv]
default-groups = ["dev", "test", "camera"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--capture sys --verbose"
markers = ["gui: marks tests as requiring a GUI"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
src = ["senxor", "example", "bin", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "TD",
  "N",
  "C",
  "T",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D401",
  "A",
  "ANN",
  "FIX",
  "PLR",
  "FBT",
  "RET",
  "EM",
  "ERA",
  "BLE",
  "SLF",
  "TRY",
]
fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.format]
preview = true
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.commitizen]

version_provider = "uv"
tag_format = "v$version"
